# Omega_SDK

./: .gitignore  CONTRIBUTING.md  LICENSE  LICENSE.md  MANIFEST.in  Makefile  NOTICE  README.md  SECURITY.md  aggregate_strata.py  doc.md  impedance_matcher.py  init.bat  init.sh  node_id.example.json  omega_sync.py  pyproject.toml  test_muscle.py  thermal_bridge.py
docs/: THREAT_MODEL.md  iso16_omega_bridge.md  summary_template.md
examples/: actuation.cpp  basic_handshake.py  calibration.rs  grid_couple_demo.py  oversight.py  simulated_dissonance.py  thermal_attenuator.py
logs/: ledger_alpha_2026-02-01.jsonl
omega/: __init__.py  core.cpp  core.py  core.rs  core_loader.py
tests/: conformance_test.py  test_core.py
tools/: aggregate_strata.py  fetch_engine.py  generate_report.py  get_node_fingerprint.py
