[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omega-sdk"
version = "0.1.0"
description = "Deterministic Python interface for high-precision fluidic orchestration."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
dependencies = [
	"numpy",
	"pydantic",
	"rich"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["omega*"]
exclude = [
	"omega/*.cpp", 
	"omega/*.h", 
	"omega/*.so", 
	"omega/*.dylib", 
	"muscle*", 
	"private*"
]

[tool.setuptools.package-data]
# Ensure we don't accidentally ship the binary through package-data
"*" = ["*.md", "*.jsonl"]